rudy-db/tests/snapshots/live_introspection__introspect_btreemap.snap
---
source: rudy-db/tests/live_introspection.rs
expression: value
snapshot_kind: text
---
Map {
    ty: "BTreeMap<String, i32>",
    entries: [
        (
            Scalar {
                ty: "String",
                value: "\"one\"",
            },
            Scalar {
                ty: "i32",
                value: "1",
            },
        ),
        (
            Scalar {
                ty: "String",
                value: "\"three\"",
            },
            Scalar {
                ty: "i32",
                value: "3",
            },
        ),
        (
            Scalar {
                ty: "String",
                value: "\"two\"",
            },
            Scalar {
                ty: "i32",
                value: "2",
            },
        ),
    ],
}
