rudy-db/tests/snapshots/live_introspection__introspect_complex_nested_types.snap
---
source: rudy-db/tests/live_introspection.rs
expression: value
snapshot_kind: text
---
Struct {
    ty: "TestComplexData",
    fields: {
        "id": Scalar {
            ty: "u64",
            value: "12345",
        },
        "location": Struct {
            ty: "TestPoint",
            fields: {
                "x": Scalar {
                    ty: "f64",
                    value: "3.14001",
                },
                "y": Scalar {
                    ty: "f64",
                    value: "2.71",
                },
            },
        },
        "metadata": Map {
            ty: "BTreeMap<String, String>",
            entries: [
                (
                    Scalar {
                        ty: "String",
                        value: "\"author\"",
                    },
                    Scalar {
                        ty: "String",
                        value: "\"test\"",
                    },
                ),
                (
                    Scalar {
                        ty: "String",
                        value: "\"version\"",
                    },
                    Scalar {
                        ty: "String",
                        value: "\"1.0\"",
                    },
                ),
            ],
        },
        "values": Array {
            ty: "Vec<i32>",
            items: [
                Scalar {
                    ty: "i32",
                    value: "100",
                },
                Scalar {
                    ty: "i32",
                    value: "200",
                },
                Scalar {
                    ty: "i32",
                    value: "300",
                },
            ],
        },
    },
}
