rudy-db/tests/snapshots/live_introspection__introspect_enums-10.snap
---
source: rudy-db/tests/live_introspection.rs
expression: u8_fifth_value
snapshot_kind: text
---
Scalar {
    ty: "U8Enum::Fifth",
    value: "5",
}
