rudy-db/tests/snapshots/live_introspection__introspect_enums-2.snap
---
source: rudy-db/tests/live_introspection.rs
expression: tuple_value
snapshot_kind: text
---
Tuple {
    ty: "TestEnum::Tuple",
    entries: [
        Scalar {
            ty: "u32",
            value: "42",
        },
        Scalar {
            ty: "String",
            value: "\"test\"",
        },
    ],
}
