rudy-db/tests/snapshots/live_introspection__introspect_enums-3.snap
---
source: rudy-db/tests/live_introspection.rs
expression: struct_value
snapshot_kind: text
---
Struct {
    ty: "TestEnum::Struct",
    fields: {
        "x": Scalar {
            ty: "f64",
            value: "3.14002",
        },
        "y": Scalar {
            ty: "f64",
            value: "2.71",
        },
    },
}
