rudy-db/tests/snapshots/live_introspection__introspect_enums-4.snap
---
source: rudy-db/tests/live_introspection.rs
expression: repr_c_unit_value
snapshot_kind: text
---
Scalar {
    ty: "ReprCEnum::Unit",
    value: "Unit",
}
