rudy-db/tests/snapshots/live_introspection__introspect_enums-6.snap
---
source: rudy-db/tests/live_introspection.rs
expression: repr_c_struct_value
snapshot_kind: text
---
Struct {
    ty: "ReprCEnum::Struct",
    fields: {
        "x": Scalar {
            ty: "f64",
            value: "1.41",
        },
        "y": Scalar {
            ty: "f64",
            value: "4.13",
        },
    },
}
