rudy-db/tests/snapshots/live_introspection__introspect_enums-7.snap
---
source: rudy-db/tests/live_introspection.rs
expression: u8_first_value
snapshot_kind: text
---
Scalar {
    ty: "U8Enum::First",
    value: "0",
}
