rudy-db/tests/snapshots/live_introspection__introspect_enums-8.snap
---
source: rudy-db/tests/live_introspection.rs
expression: u8_second_value
snapshot_kind: text
---
Scalar {
    ty: "U8Enum::Second",
    value: "1",
}
