rudy-db/tests/snapshots/live_introspection__introspect_enums-9.snap
---
source: rudy-db/tests/live_introspection.rs
expression: u8_third_value
snapshot_kind: text
---
Scalar {
    ty: "U8Enum::Third",
    value: "2",
}
